# netpoll-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
cmake/: CPM.cmake  add_executable_test.cmake  dll_support.cmake
dependencies/: fetch.cmake  windows_support.cc  windows_support.h
dependencies/elog4cpp/: fetch_elog4cpp.cmake
dependencies/wepoll/: wepoll.c  wepoll.h
examples/: CMakeLists.txt  echo_client_example.cc  echo_server_example.cc
examples/chat/: CMakeLists.txt  chat_client.cc  chat_server.cc  context.cc  context.h  type.h  util.h
examples/http/: CMakeLists.txt  README.md  http_context.cc  http_context.h  http_request.h  http_response.cc  http_response.h  http_server.cc  request_handler.cc  request_handler.h  types.h
netpoll/: core.h
netpoll/net/: callbacks.h  channel.cc  channel.h  eventloop.cc  eventloop.h  eventloop_thread.cc  eventloop_thread.h  eventloop_threadpool.cc  eventloop_threadpool.h  inet_address.cc  inet_address.h  resolver.h  tcp_client.cc  tcp_client.h  tcp_connection.h  tcp_server.cc  tcp_server.h
netpoll/net/inner/: acceptor.cc  acceptor.h  connector.cc  connector.h  poller.cc  poller.h  resolver_impl.cc  resolver_impl.h  socket.cc  socket.h  tcp_connection_impl.cc  tcp_connection_impl.h  timer.cc  timer.h  timer_queue.cc  timer_queue.h  timing_wheel.cc  timing_wheel.h
netpoll/net/inner/poller/: epoll_poller.cc  epoll_poller.h  kqueue.cc  kqueue.h  poll_poller.cc  poll_poller.h
netpoll/util/: any.h  concurrent_task_queue.cc  concurrent_task_queue.h  defer_call.h  encode_util.cc  encode_util.h  funcs.h  lockfree_queue.h  make_copy_mv.h  message_buffer.cc  message_buffer.h  move_wrapper.h  mutex_guard.h  noncopyable.h  string_view.h  task_per_thread_queue.h  task_queue.h  time_stamp.cc  time_stamp.h
netpoll/wrap/: eventloop_wrap.cc  eventloop_wrap.h  signal_task.cc  signal_task.h  tcp_dialer.h  tcp_listener.h  trait.h  types.h
tests/: CMakeLists.txt  concurrent_task_queue_test.cc  encode_util_test.cc  enventloop_thread_test.cc  eventloop_threadpool_test.cc  lock_free_queue_test.cc  message_buffer_test.cc  resolver_test.cc  time_stamp_test.cc  timerqueue_test.cc  timing_wheels_test.cc
tests/inner/: timer.h
